Project packages added, files moved into packages and initial map implemented in MapsFragment.kt

--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/bikeStationsFragment"
+        android:title="Bike Stations" />
+    <item
+        android:id="@+id/mapsFragment"
+        android:title="Map" />
     <item android:title="Weather" />
 </menu>
