--- a/app/src/main/res/layout/fragment_profiles.xml
+++ b/app/src/main/res/layout/fragment_profiles.xml
@@ -6,6 +6,7 @@
     tools:context=".ui.profiles.ProfilesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_profiles"
         android:layout_width="match_parent"
         android:layout_height="494dp" />
 
