--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/userRegistrationFragment"
+        android:title="Register" />
+    <item
+        android:id="@+id/profilesFragment"
+        android:title="Profiles" />
+    <item
         android:id="@+id/bikeStationsFragment"
         android:title="Bike Stations" />
     <item
