Buttons loading map with markers for Dublin and Paris implemented, buttons loading weather in Dublin and Paris implemented

--- a/app/src/main/res/menu/navdrawer_menu.xml
+++ b/app/src/main/res/menu/navdrawer_menu.xml
@@ -13,5 +13,7 @@
     <item
         android:id="@+id/mapsFragment"
         android:title="Map" />
-    <item android:title="Weather" />
+    <item
+        android:id="@+id/weatherFragment"
+        android:title="Weather" />
 </menu>
