Showing map with marker in BikeStationDetailActivity.kt implemented, lat & lng intents added to BikeStationsAdapter.kt, adding options menu on fragments, layout profile_row.xml optimized, Register button navigation to ProfilesFragment implemented in UserRegistrationFragment.kt, ProfilesFragment.kt optimized

--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -55,7 +55,7 @@
                     android:id="@+id/address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DHAKA, BD"
+                    android:text="Dublin, IE"
                     android:textSize="24dp" />
 
                 <TextView
